parser/src/tests/corpus/negatives/bare-inquiry/expected
Error 1/1: pure expressions cannot contain inquiry effects, e.g. `$…`
In source "negatives/bare-inquiry/input", line 1:
  $x
  ^^
